2003-02-27  Havoc Pennington  <hp@pobox.com>

	Changes made on plane from FOSDEM, syncing from laptop.
	
	* src/main.c (main): add more debug spew about conditional 
	build stuff
	(main): panic to "Simple" theme

	* src/window.c, src/window-props.c: move WM_NORMAL_HINTS and
	WM_PROTOCOLS to new property system; don't queue move resize on
	updating WM_PROTOCOLS; move WM_HINTS to new property system;
	reload icon in an idle handler.
	
2003-02-28  Mark McLoughlin  <mark@skynet.ie>

	Give me back my keys.

	* src/keybindings.c: (meta_window_grab_keys): don't
	grab keys on DOCK windows.

	* src/window.c: (recalc_window_type): re-grab the
	keys.

2003-02-26  Dmitry G. Mastrukov  <dmitry@taurussoft.org>

	* configure.in: Added Belarusian to ALL_LINGUAS.

2003-02-26  Mark McLoughlin  <mark@skynet.ie>

	* src/keybindings.c: (handle_panel_keybinding): release
	the keyboard grab before sending the action message to
	the panel.

2003-02-24  Mark McLoughlin  <mark@skynet.ie>

	Take control of the panel's global keybindings. The
	screenshot utility is hooked up using a special case
	run_command and the menu and run dialog bindings are
	done using the _GNOME_PANEL_ACTION ClientMessage
	protocol.

	* src/display.[ch]: (meta_display_open): add some atoms.

	* src/keybindings.c:
	(handle_panel_keybinding): impl to handle a keybinding
	by sending an action message to the panel.

	* src/metacity.schemas.in: add schemas for the panel and
	screenshot keybindings and the screenshot commands.

	* src/prefs.[ch]: (update_command),
	(meta_prefs_get_gconf_key_for_command): impl special case
	handling for the screenshot commands. They are stored at
	the the end of the commands array but have named keys.

2003-02-23  Havoc Pennington  <hp@pobox.com>

	Patch from Rob Adams addresses #95014 (placement issues), 
	makes first fit algorithm "center tile", adds most code 
	for per-xinerama workspaces (#86682) but disables it for now.
	
	* src/workspace.c (meta_workspace_get_work_area_for_xinerama)